k8s/05-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocery-app
  namespace: grocery
  labels:
    app: grocery-app
spec:
  type: ClusterIP
  selector:
    app: grocery-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
